tests/ui/const-generics/mgca/array_expr_arg_complex.stderr
error: complex const arguments must be placed inside of a `const` block
  --> $DIR/array_expr_arg_complex.rs:12:25
   |
LL |     takes_array::<{ [N, N + 1] }>();
   |                         ^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/array_expr_arg_complex.rs:13:37
   |
LL |     takes_tuple_with_array::<{ ([N, N + 1], N) }>();
   |                                     ^^^^^

error: aborting due to 2 previous errors

